fixed text-align issues

--- a/src/index.css
+++ b/src/index.css
@@ -72,7 +72,7 @@ h3 {
   margin-bottom: 10px;
   padding: 10px;
   font-size: 36px;
-  text-align: left;
+  text-align: center;
 }
 
 p {
